# marimo.zed

./: README.md  pyproject.toml
marimo_zed/: __main__.py  bridge.py  install.py  kernel.py  watcher.py
tests/: test_display_data.py  test_kernel.py  test_output_routing.py  test_ssh_shim.py  test_watch.py
