[project]
name = "marimo-zed"
version = "0.1.0"
description = "A reactive marimo kernel for Zed's built-in REPL"
requires-python = ">=3.10"
dependencies = [
  "marimo>=0.21.1",
  "pyzmq",
  "ipykernel>=6.29",
]

[project.scripts]
marimo-zed-install = "marimo_zed.install:main"

[dependency-groups]
dev = [
  "pytest",
  "jupyter-client",
  "ruff",
  "polars>=1.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marimo_zed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
